crates/hwp-core/tests/snapshots/snapshot_tests__table_position_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="body">
<table class="table" style="border-collapse: collapse; border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0)">
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 209.8pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 209.8pt">  </td>
</tr>
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 209.8pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 209.8pt">  </td>
</tr>
</table><div class="textbox"><p style="margin-left: 20.0pt"><span style="font-size: 10.0pt; font-family: '바탕'">표 </span><span style="font-size: 10.0pt; font-family: '바탕'"> 여백 0mm, 글자처럼 취급</span></p></div><span style="font-size: 10.0pt; font-family: '바탕'">전</span><span style="font-size: 10.0pt; font-family: '바탕'">후</span>
<hr class="page-break">
<table class="table" style="border-collapse: collapse; border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0)">
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
</table><div class="textbox"><p style="margin-left: 20.0pt"><span style="font-size: 10.0pt; font-family: '바탕'">표 </span><span style="font-size: 10.0pt; font-family: '바탕'"> 여백 10mm, 문단 왼쪽부터 5mm</span></p></div>
<table class="table" style="border-collapse: collapse; border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0)">
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
</table><div class="textbox"><p style="margin-left: 20.0pt"><span style="font-size: 10.0pt; font-family: '바탕'">표 </span><span style="font-size: 10.0pt; font-family: '바탕'"> 여백 10mm, 단 왼쪽부터 5mm</span></p></div>
<table class="table" style="border-collapse: collapse; border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0)">
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
</table><div class="textbox"><p style="margin-left: 20.0pt"><span style="font-size: 10.0pt; font-family: '바탕'">표 </span><span style="font-size: 10.0pt; font-family: '바탕'"> 여백 10mm, 쪽 왼쪽부터 5mm</span></p></div>
<table class="table" style="border-collapse: collapse; border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0)">
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
</table><div class="textbox"><p style="margin-left: 20.0pt"><span style="font-size: 10.0pt; font-family: '바탕'">표 </span><span style="font-size: 10.0pt; font-family: '바탕'"> 여백 10mm, 종이 왼쪽부터 35mm</span></p></div>
<hr class="page-break">
<table class="table" style="border-collapse: collapse; border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0)">
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
</table><div class="textbox"><p style="margin-left: 20.0pt"><span style="font-size: 10.0pt; font-family: '바탕'">표 </span><span style="font-size: 10.0pt; font-family: '바탕'"> 여백 10mm, 문단 오른쪽부터 5mm</span></p></div>
<table class="table" style="border-collapse: collapse; border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0)">
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
</table><div class="textbox"><p style="margin-left: 20.0pt"><span style="font-size: 10.0pt; font-family: '바탕'">표 </span><span style="font-size: 10.0pt; font-family: '바탕'"> 여백 10mm, 단 오른쪽부터 5mm</span></p></div>
<table class="table" style="border-collapse: collapse; border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0)">
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
</table><div class="textbox"><p style="margin-left: 20.0pt"><span style="font-size: 10.0pt; font-family: '바탕'">표 </span><span style="font-size: 10.0pt; font-family: '바탕'"> 여백 10mm, 쪽 오른쪽부터 5mm</span></p></div>
<table class="table" style="border-collapse: collapse; border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0)">
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
</table><div class="textbox"><p style="margin-left: 20.0pt"><span style="font-size: 10.0pt; font-family: '바탕'">표 </span><span style="font-size: 10.0pt; font-family: '바탕'"> 여백 10mm, 종이 오른쪽부터 35mm</span></p></div>
<hr class="page-break">
<table class="table" style="border-collapse: collapse; border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0)">
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
</table><div class="textbox"><p style="margin-left: 20.0pt"><span style="font-size: 10.0pt; font-family: '바탕'">표 </span><span style="font-size: 10.0pt; font-family: '바탕'"> 여백 10mm, 문단 가운데로부터 5mm</span></p></div>
<table class="table" style="border-collapse: collapse; border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0)">
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
</table><div class="textbox"><p style="margin-left: 20.0pt"><span style="font-size: 10.0pt; font-family: '바탕'">표 </span><span style="font-size: 10.0pt; font-family: '바탕'"> 여백 10mm, 단 가운데로부터 5mm</span></p></div>
<table class="table" style="border-collapse: collapse; border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0)">
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
</table><div class="textbox"><p style="margin-left: 20.0pt"><span style="font-size: 10.0pt; font-family: '바탕'">표 </span><span style="font-size: 10.0pt; font-family: '바탕'"> 여백 10mm, 쪽 가운데로부터 5mm</span></p></div>
<table class="table" style="border-collapse: collapse; border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0)">
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 104.9pt">  </td>
</tr>
</table><div class="textbox"><p style="margin-left: 20.0pt"><span style="font-size: 10.0pt; font-family: '바탕'">표 </span><span style="font-size: 10.0pt; font-family: '바탕'"> 여백 10mm, 종이 가운데로부터 5mm</span></p></div>
</div>
