crates/hwp-core/tests/snapshots/snapshot_tests__underline_styles_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**용지 크기**: 0.00mm x 0.00mm



실선밑줄

대시밑줄

점선밑줄

대시일점밑줄

대시이점밑줄

긴대시밑줄

큰점선밑줄

이중실선밑줄

이중증가밑줄

이중감소밑줄

삼중밑줄
